RESOLVED FIXED161033
Remote Inspector: some methods don't need to be marked virtual anymore
https://bugs.webkit.org/show_bug.cgi?id=161033
Summary Remote Inspector: some methods don't need to be marked virtual anymore
Blaze Burg
Reported 2016-08-20 14:12:13 PDT
.
Attachments
Proposed Fix (1.52 KB, patch)
2016-08-20 14:13 PDT, Blaze Burg
no flags
Blaze Burg
Comment 1 2016-08-20 14:13:24 PDT
Created attachment 286545 [details] Proposed Fix
WebKit Commit Bot
Comment 2 2016-08-20 18:45:11 PDT
Comment on attachment 286545 [details] Proposed Fix Clearing flags on attachment: 286545 Committed r204686: <http://trac.webkit.org/changeset/204686>
WebKit Commit Bot
Comment 3 2016-08-20 18:45:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.