Remote Inspector: some methods don't need to be marked virtual anymore https://bugs.webkit.org/show_bug.cgi?id=161033

Reviewed by Darin Adler.

This probably happened when this code was last refactored and moved around.

* inspector/remote/RemoteConnectionToTarget.h:


Canonical link: https://commits.webkit.org/179159@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204686 268f45cc-cd09-0410-ab3c-d52691b4dbfc